--- a/index.html
+++ b/index.html
@@ -267,6 +267,17 @@ KPI cards, bar/pie charts, trend visuals, and scatter plots to deliver data-driv
             </div>
           </div>
         </div>
+        <div class="col-12 col-sm-6 col-md-4 d-flex">
+          <div class="card flex-fill text-center">
+            <img src="customer.png" class="card-img-top" alt="customer segmentation and analysis">
+            <div class="card-body">
+              <h5 class="card-title"> Data Analysis using Python </h5>
+              <p class="card-text">Cleaned and analyzed e-commerce customer data using Python libraries (Pandas, Seaborn, Matplotlib) to identify
+spending patterns, income trends, and demographic insights. Performed K-Means clustering with Elbow and Silhouette methods to generate clear, data-driven customer segments. Identified five distinct personas based on income and spending patterns, enabling more targeted and efficient marketing.</p>
+              <a href="https://github.com/Gajanannaik007/customer_segmentation_and_analysis_using_python" class="btn-source">View Code ♐</a>
+            </div>
+          </div>
+        </div>
 
       </div>
     </div>
@@ -410,4 +421,5 @@ style="background:#001f3f; width:100%; padding-left:0; padding-right:0; display:
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
